--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "pnpm": {
         "peerDependencyRules": {
             "allowedVersions": {
-                "react": "^18.0.0",
-                "react-dom": "^18.0.0"
+                "react": ">=18.0.0 <19.0.0",
+                "react-dom": ">=18.0.0 <19.0.0"
             },
             "ignoreMissing": [
                 "react-native"
@@ -62,9 +62,9 @@
             "loader-utils@1": "^1.4.2",
             "loader-utils@3": "^3.2.1",
             "prettier": "3.5.3",
-            "react": "^18.0.0",
+            "react": ">=18.0.0 <19.0.0",
             "react-big-calendar@1>clsx": "2.1.1",
-            "react-dom": "^18.0.0",
+            "react-dom": ">=18.0.0 <19.0.0",
             "rollup": "catalog:",
             "ts-node": "10.9.2",
             "typescript": ">5.8.0"
