--- a/packages/pluggableWidgets/barcode-generator-web/package.json
+++ b/packages/pluggableWidgets/barcode-generator-web/package.json
@@ -56,6 +56,7 @@
         "@mendix/widget-plugin-component-kit": "workspace:*",
         "@mendix/widget-plugin-platform": "workspace:*",
         "@mendix/widget-plugin-test-utils": "workspace:*",
-        "cross-env": "^7.0.3"
+        "cross-env": "^7.0.3",
+        "eslint": "^9.37.0"
     }
 }
