fix: rewrite tests for current version of the widget

--- a/packages/pluggableWidgets/skiplink-web/package.json
+++ b/packages/pluggableWidgets/skiplink-web/package.json
@@ -50,6 +50,7 @@
         "@mendix/prettier-config-web-widgets": "workspace:*",
         "@mendix/run-e2e": "workspace:*",
         "@mendix/widget-plugin-hooks": "workspace:*",
-        "@mendix/widget-plugin-platform": "workspace:*"
+        "@mendix/widget-plugin-platform": "workspace:*",
+        "@mendix/widget-plugin-test-utils": "workspace:*"
     }
 }
