chore: add testproject info to package json

--- a/packages/pluggableWidgets/skiplink-web/package.json
+++ b/packages/pluggableWidgets/skiplink-web/package.json
@@ -15,6 +15,10 @@
         "type": "widget",
         "mpkName": "com.mendix.widget.web.SkipLink.mpk"
     },
+    "testProject": {
+        "githubUrl": "https://github.com/mendix/testProjects",
+        "branchName": "skiplink-web"
+    },
     "packagePath": "com.mendix.widget.web",
     "marketplace": {
         "minimumMXVersion": "11.1.0",
