--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
         "build": "turbo run build",
         "build:mcp": "cd mcp && pnpm build",
         "changelog": "pnpm --filter @mendix/automation-utils run changelog",
-        "oss-clearance": "pnpm --filter @mendix/automation-utils run oss-clearance",
         "create-gh-release": "turbo run create-gh-release --concurrency 1",
         "create-translation": "turbo run create-translation",
         "postinstall": "turbo run agent-rules",
         "lint": "turbo run lint --continue --concurrency 1",
+        "oss-clearance": "pnpm --filter @mendix/automation-utils run oss-clearance",
         "prepare": "husky install",
         "prepare-release": "pnpm --filter @mendix/automation-utils run prepare-release",
         "publish-marketplace": "turbo run publish-marketplace",
@@ -65,9 +65,10 @@
             "loader-utils@1": "^1.4.2",
             "loader-utils@3": "^3.2.1",
             "prettier": "3.5.3",
-            "react": "^18.0.0",
+            "react": ">=18.0.0 <19.0.0",
             "react-big-calendar@1>clsx": "2.1.1",
-            "react-dom": "^18.0.0",
+            "react-dom": ">=18.0.0 <19.0.0",
+            "rollup": "catalog:",
             "ts-node": "10.9.2",
             "typescript": ">5.8.0"
         },
