--- a/automation/utils/package.json
+++ b/automation/utils/package.json
@@ -9,6 +9,7 @@
         "rui-create-gh-release": "bin/rui-create-gh-release.ts",
         "rui-create-translation": "bin/rui-create-translation.ts",
         "rui-generate-package-xml": "bin/rui-generate-package-xml.ts",
+        "rui-include-oss-in-artifact": "bin/rui-include-oss-in-artifact.ts",
         "rui-prepare-release": "bin/rui-prepare-release.ts",
         "rui-publish-marketplace": "bin/rui-publish-marketplace.ts",
         "rui-update-changelog-module": "bin/rui-update-changelog-module.ts",
@@ -29,6 +30,7 @@
         "compile:parser:module": "peggy -o ./src/changelog-parser/parser/widget/widget.js ./src/changelog-parser/parser/widget/widget.pegjs",
         "compile:parser:widget": "peggy -o ./src/changelog-parser/parser/module/module.js ./src/changelog-parser/parser/module/module.pegjs",
         "format": "prettier --write .",
+        "include-oss-in-artifact": "ts-node bin/rui-include-oss-in-artifact.ts",
         "lint": "eslint --ext .jsx,.js,.ts,.tsx src/",
         "oss-clearance": "ts-node bin/rui-oss-clearance.ts",
         "prepare": "pnpm run compile:parser:widget && pnpm run compile:parser:module && tsc",
