--- a/packages/pluggableWidgets/range-slider-web/package.json
+++ b/packages/pluggableWidgets/range-slider-web/package.json
@@ -44,9 +44,9 @@
     },
     "dependencies": {
         "@mendix/widget-plugin-component-kit": "workspace:*",
-        "classnames": "^2.5.1",
-        "rc-slider": "^8.7.1",
-        "rc-tooltip": "^3.7.3"
+        "@rc-component/slider": "^1.0.1",
+        "@rc-component/tooltip": "^1.3.3",
+        "classnames": "^2.5.1"
     },
     "devDependencies": {
         "@mendix/automation-utils": "workspace:*",
