--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
       ]
     },
     "overrides": {
+      "@babel/core": "^7.26.10",
+      "@babel/helpers": "^7.26.10",
+      "@babel/runtime": "^7.26.10",
       "@types/react": "^18.2.9",
       "@types/big.js": "^6.1.6",
       "d3-color@<3.1.0": ">=3.1.0",
