chore: bump babel, bump all version

--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
             ]
         },
         "overrides": {
+            "@babel/core": "^7.26.10",
+            "@babel/helpers": "^7.26.10",
+            "@babel/runtime": "^7.26.10",
             "@mendix/pluggable-widgets-tools": "10.21.0",
             "react": "^18.0.0",
             "react-dom": "^18.0.0",
