--- a/packages/pluggableWidgets/rich-text-web/package.json
+++ b/packages/pluggableWidgets/rich-text-web/package.json
@@ -45,6 +45,7 @@
     "dependencies": {
         "@codemirror/lang-html": "^6.4.9",
         "@codemirror/state": "^6.5.2",
+        "@floating-ui/dom": "^1.7.4",
         "@floating-ui/react": "^0.26.27",
         "@melloware/coloris": "^0.25.0",
         "@uiw/codemirror-theme-github": "^4.23.13",
