--- a/packages/pluggable-widgets-mcp/package.json
+++ b/packages/pluggable-widgets-mcp/package.json
@@ -26,7 +26,7 @@
         "@modelcontextprotocol/sdk": "^1.24.2",
         "cors": "^2.8.5",
         "express": "^5.1.0",
-        "node-pty": "^1.0.0",
+        "node-pty": "1.2.0-beta.7",
         "tsx": "^4.21.0",
         "zod": "^4.1.13"
     },
