--- a/packages/pluggableWidgets/chart-playground-web/package.json
+++ b/packages/pluggableWidgets/chart-playground-web/package.json
@@ -5,6 +5,7 @@
     "description": "A small playground widget for charts",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
     "license": "Apache-2.0",
+    "private": true,
     "repository": {
         "type": "git",
         "url": "https://github.com/mendix/web-widgets.git"
@@ -18,8 +19,7 @@
     "packagePath": "com.mendix.widget.web",
     "marketplace": {
         "minimumMXVersion": "9.12.0",
-        "appName": "Chart Playground",
-        "appNumber": -1
+        "appName": "Chart Playground"
     },
     "testProject": {
         "githubUrl": "https://github.com/mendix/testProjects",
