--- a/packages/customWidgets/signature-web/tsconfig.json
+++ b/packages/customWidgets/signature-web/tsconfig.json
@@ -4,7 +4,7 @@
         "outDir": "dist/tsc/",
         "noEmitOnError": true,
         "sourceMap": true,
-        "module": "CommonJS",
+        "module": "esnext",
         "target": "es5",
         "lib": ["es2015", "dom"],
         "moduleResolution": "node",
